--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,9 @@ name: SkyGridSupport
 version: '${project.version}'
 main: com.skygridsupport.SkyGridSupport
 api-version: '1.20'
+softdepend:
+  - GriefPrevention
+  - WorldGuard
 
 commands:
   gridrtp:
